appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Accounts"
- assertVisible: "Everyday Current"
- tapOn: "Everyday Current"
- assertVisible: "Account Detail"
- assertVisible: "Everyday Current"
- assertVisible: "40-05-15 12345678"
- assertVisible: "InterimAvailable"
- assertVisible: "2847.63"
- assertVisible: "Transactions"
- tapOn: "Transactions"
- assertVisible: "Transactions"
