appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Accounts"
- assertVisible: "Everyday Current"
- assertVisible: "ISA Saver"
- assertVisible: "Platinum Mastercard"
- tapOn: "Everyday Current"
- assertVisible: "Account Detail"
