appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Find HSBC ATM"
- assertVisible: "HSBC Camden Town"
- assertVisible: "HSBC Kentish Town"
- assertVisible: "HSBC Euston Road"
- assertVisible: "HSBC Oxford Street"
- tapOn:
    id: location_search
- inputText: "NW1"
- assertVisible: "HSBC Camden Town"
- assertVisible: "HSBC Kentish Town"
