appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Beneficiaries"
- assertVisible: "Jameson Lettings"
- assertVisible: "RENT-FLAT12"
- assertVisible: "John Sharma"
- assertVisible: "EDF Energy"
- assertVisible: "Hargreaves Lansdown"
- tapOn:
    id: back_button
- assertVisible: "Account Detail"
