appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Budgets"
- assertVisible: "Set Monthly Budget"
- assertVisible: "Groceries"
- assertVisible: "Dining"
- assertVisible: "Over budget by £18.00"
- tapOn: "View transactions"
- assertVisible: "Spending by Category"
