appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Connected Banks"
- assertVisible: "Authorised"
- assertVisible: "10 data types shared"
- assertVisible: "Expires in 89 days"
- tapOn:
    text: "Authorised"
- assertVisible: "Consent Detail"
