appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Direct Debits"
- assertVisible: "British Gas"
- assertVisible: "DD-BG-44120"
- assertVisible: "Vodafone"
- assertVisible: "Aviva Insurance"
- assertVisible: "TV Licensing"
- assertVisible: "Inactive"
- tapOn:
    id: back_button
- assertVisible: "Account Detail"
