appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Connect with HSBC"
- assertVisible: "Account details"
- assertVisible: "Balances"
- assertVisible: "Transaction history"
- assertVisible: "This consent is valid for 90 days"
- tapOn: "Continue to HSBC"
- assertVisible: "Connecting to HSBC"
