appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "My Finances"
- assertVisible: "Net Worth"
- assertVisible: "£14,955.45"
- assertVisible: "June 2026"
- assertVisible: "Bills"
- assertVisible: "Groceries"
- assertVisible: "Insights"
- tapOn: "Budgets"
- assertVisible: "Budgets"
