appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Scheduled Payments"
- assertVisible: "HMRC Self Assessment"
- assertVisible: "HMRC-SA-2526"
- assertVisible: "Westminster Council Tax"
- assertVisible: "CTAX-JUL"
- tapOn:
    id: back_button
- assertVisible: "Account Detail"
