appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Settings"
- assertVisible: "Appearance"
- assertVisible: "Theme"
- assertVisible: "System"
- assertVisible: "Security"
- assertVisible: "Biometric App Lock"
- assertVisible: "Session Timeout"
- assertVisible: "Manage Consents"
- assertVisible: "Profile"
- tapOn: "Profile"
- assertVisible: "Priya Sharma"
