appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Spending by Category"
- assertVisible: "This month"
- assertVisible: "June 2026"
- assertVisible: "Bills"
- assertVisible: "Groceries"
- assertVisible: "Dining"
- tapOn: "Dining"
- assertVisible: "Transactions"
