appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Standing Orders"
- assertVisible: "Jameson Lettings"
- assertVisible: "Monthly on the 1st"
- assertVisible: "ISA Saver"
- assertVisible: "PureGym"
- assertVisible: "Monthly on the 15th"
- tapOn:
    id: back_button
- assertVisible: "Account Detail"
