appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Statement Detail"
- assertVisible: "MAY-2026-STMT"
- assertVisible: "OpeningBalance"
- assertVisible: "ClosingBalance"
- assertVisible: "TESCO STORES 3225 LONDON"
- assertVisible: "Download PDF"
- tapOn: "Download PDF"
