appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Statements"
- assertVisible: "MAY-2026-STMT"
- assertVisible: "APR-2026-STMT"
- assertVisible: "MAR-2026-STMT"
- tapOn: "MAY-2026-STMT"
- assertVisible: "Statement Detail"
