appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Accounts"
- assertVisible: "Everyday Current"
- tapOn: "Everyday Current"
- assertVisible: "Account Detail"
- assertVisible: "Transactions"
- tapOn:
    text: "Transactions"
    index: 0
- assertVisible: "Transactions"
- assertVisible: "Money in"
- assertVisible: "Money out"
- assertVisible: "SALARY ACME LTD"
- assertVisible: "TESCO STORES 3476 LONDON"
- assertVisible: "Income"
- assertVisible: "Groceries"
