appId: org.mifosx.openbanking
---
- launchApp
- assertVisible: "Connect your HSBC account securely"
- assertVisible: "Account balances"
- assertVisible: "No payments or transfers"
- tapOn: "Connect with HSBC"
- assertVisible: "Continue to HSBC"
